[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://SupportScenes/Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://lighting.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Assets/hp_bar.png" type="Texture" id=4]
[ext_resource path="res://SupportScenes/ShakingCamera.gd" type="Script" id=5]
[ext_resource path="res://Player/Assets/playerShip1_blue.png" type="Texture" id=6]
[ext_resource path="res://Projectiles/PlayerProjectile.tscn" type="PackedScene" id=7]

[node name="Player" type="KinematicBody2D" groups=["Player", "camera_shaker", "frame_freezer"]]
collision_mask = 8
script = ExtResource( 1 )
max_health = 400
health = 400

[node name="Gun1" parent="." instance=ExtResource( 2 )]
position = Vector2( 14, 0 )
z_index = -1
screenshake_amplitude = 0.1
screenshake_duration = 1.0
bullet = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Shape" type="Polygon2D" parent="."]
visible = false
color = Color( 0.231373, 0.45098, 0.2, 1 )
polygon = PoolVector2Array( -8, -4, -6, -2, -6, 2, -8, 4, -8, 8, 8, 3, 5, 0, 8, -3, -8, -8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -5, -9, -1, -9, 3, -2, 8, -1, 8, 1, 3, 2, -1, 9, -5, 9, -6, 3, -8, 2, -8, -2, -6, -3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PoolVector2Array( -5, -8, -1, -8, 2, -2, 6, -1, 6, 1, 2, 2, -1, 8, -5, 8, -6, 2, -8, 0, -6, -2 )

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = -16.0
margin_right = 12.0
margin_bottom = -14.0
rect_min_size = Vector2( 16, 2 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0, 0, 0, 0.25098 )
tint_progress = Color( 0.556863, 0.027451, 0.027451, 0.745098 )
nine_patch_stretch = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 7, 3 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
color = Color( 0.537255, 0.780392, 0.294118, 1 )
shadow_enabled = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
